--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,9 @@
   /* --shadow: 0 1px 5px rgba(104, 104, 104, 0.8); */
   --shadow: 0 2px 3px rgba(104, 104, 104, 0.8);
   --blue: #03039a;
-  --background: #ccc; 
-  --background: #fff59f; 
-  --background: #f2f2f2; 
+  --background: #ccc;
+  --background: #fff59f;
+  --background: #f2f2f2;
 }
 
 html {
@@ -34,11 +34,23 @@ body {
   grid-gap: 20px;
   margin: 20 0 0 0;
   padding: 0;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;    
+  grid-template-columns: repeat(6, 1fr);
 }
 
+/* @media (max-width: 760px) {
+  .main-nav ul {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 440px) {
+  .main-nav ul {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+ */
 .main-nav li {
-  border: 10px solid var(--shadow);  
+  border: 10px solid var(--shadow);
 }
 
 .main-nav a {
@@ -49,8 +61,8 @@ body {
   padding: 0.8rem;
   text-align: center;
   font-size: 1.1rem;
-  height: 3rem;  
-  box-shadow: var(--shadow);  
+  height: 3rem;
+  box-shadow: var(--shadow);
 }
 
 .main-nav li a:hover {
@@ -65,9 +77,77 @@ body {
   color: var(--blue);
 }
 
-.main-nav li a.active:hover{
+.main-nav li a.active:hover {
   background-color: var(--light);
   color: var(--blue);
+}
+
+.nav-toggle {
+  display: none;
+}
+
+@media (max-width: 760px) {
+  .main-nav ul {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 440px) {
+  nav {
+    display: none; 
+    /* display: grid; */
+    transform: scale(1,0);
+    transform-origin: top;
+    transition: transform 400ms ease-in-out;
+  }
+
+  .nav-toggle:checked ~ nav {
+    display: grid;
+    transform: scale(1,1);
+  }
+
+  .main-nav ul {
+    grid-gap: 7px;
+    margin: 0 0 0 0;
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .nav-toggle-label span {
+    margin-top: 2px;
+    margin-bottom: 6px;
+  }
+
+  .nav-toggle-label span,
+  .nav-toggle-label span::before,
+  .nav-toggle-label span::after {
+    display: block;
+    background: var(--blue);
+    height: 2px;
+    width: 1em;
+    border-radius: 2px;
+    position: relative;
+  }
+
+  .nav-toggle-label span::before,
+  .nav-toggle-label span::after {
+    content: "";
+    position: absolute;
+  }
+
+  .nav-toggle-label span::before {
+    top: 4px;
+  }
+
+  .nav-toggle-label span::after {
+    bottom: 4px;
+  }
+
+  .main-nav a {
+    padding: 0.8rem;
+    text-align: center;
+    font-size: 1.0rem;
+    height: 1.0rem;
+  }
 }
 
 .team-img {
@@ -77,7 +157,7 @@ body {
 .picto {
   width: 65px;
 }
-body h1{
+body h1 {
   color: var(--blue);
   font-size: 1.5em;
   font-weight: bold;
@@ -86,7 +166,7 @@ body h1{
   margin: 10px;
 }
 
-body h2{
+body h2 {
   color: var(--blue);
   font-size: 1.2em;
   font-weight: bold;
@@ -95,7 +175,7 @@ body h2{
   margin: 10px;
 }
 
-body p{
+body p {
   margin: 10px;
-  font-size: 1.0em;
+  font-size: 1em;
 }
